tests/baselines/reference/controlFlowIIFE2.errors.txt
controlFlowIIFE2.ts(41,5): error TS18048: 'x' is possibly 'undefined'.
controlFlowIIFE2.ts(42,5): error TS18048: 'y' is possibly 'undefined'.
controlFlowIIFE2.ts(66,5): error TS7027: Unreachable code detected.
controlFlowIIFE2.ts(74,5): error TS7027: Unreachable code detected.


==== controlFlowIIFE2.ts (4 errors) ====
    // #30625
    declare const x: string | undefined;
    declare const y: { z: string | undefined };
    function needsString(it: string) {
        return it;
    }
    
    function a() {
        if (!x) {
            throw new Error("Missing x");
        }
        const res1 = (() => needsString(x))();
        const res2 = (async () => needsString(x))();
    
        if (!y.z) {
            throw new Error("Missing z.");
        }
    
        const res3 = (() => needsString(y.z))();
        const res4 = (async () => needsString(y.z))(); // should not error
    }
    
    // #38929
    class MyClass {
        public foo: number;
    
        constructor() {
            this.foo = 0;
            (async () => this.foo + 5)(); // should not error
        }
    }
    
    async function f1() {
        let x: string | undefined;
        let y: string | undefined;
        (async () => {
            x = "";
            await 2;
            y = "";
        })();
        x.toLowerCase(); // ideally should not error, but unfortunately does
        ~
!!! error TS18048: 'x' is possibly 'undefined'.
        y.toLowerCase(); // should error
        ~
!!! error TS18048: 'y' is possibly 'undefined'.
    }
    
    async function f2() {
        let x: string | undefined;
        await (async () => {
            x = "";
        })();
        x.toLowerCase(); // should not error
    }
    
    async function f3() {
        let x: string | undefined;
        await (async () => {
            x = "";
        })();
        x.toLowerCase(); // should not error
    }
    
    async function f4() {
        let x = "";
        (() => {
            throw new Error("");
        })();
        x.toLowerCase(); // should error. unreachable
        ~~~~~~~~~~~~~~~~
!!! error TS7027: Unreachable code detected.
    }
    
    async function f5() {
        let x = "";
        await (async () => {
            throw new Error("");
        })();
        x.toLowerCase(); // should error. unreachable
        ~~~~~~~~~~~~~~~~
!!! error TS7027: Unreachable code detected.
    }
    